working on modal responsiveness for smaller screens

--- a/createEvent.html
+++ b/createEvent.html
@@ -100,18 +100,18 @@
   </div>
 
 <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade col-lg-12" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="btn-close bg-primary rounded-circle" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body bg-light text-center">
+        <div class="modal-body bg-light d-flex justify-content-sm-center align-self-sm-center  text-center">
           <div class="main-wrapper rounded-1">
             <div class="checked-icon">
-              <img class="mt-5 ms-5"src="./images/checked.png" alt="checked icon">
+              <img class="mt-5"src="./images/checked.png" alt="checked icon">
             </div>
-            <div class="msg-area mt-4 ms-5">
+            <div class="msg-area mt-4">
               <h5>Event Successfully Created.</h5>
             </div>
         </div>
