margin left adjusted on create event form

--- a/createEvent.html
+++ b/createEvent.html
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse  justify-content-between" id="navbarSupportedContent">
         <ul class="navbar-nav me-5 mb-2 mb-lg-0 ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Create an Event</a>
+            <a class="nav-link active" aria-current="page" href="/">Create an Event</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Auction House</a>
@@ -43,7 +43,7 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row ms-3 g-3">
+    <div class="row g-3">
       <h4 class="py-4">Create Event</h4>
       <form class="col-sm-12 col-md-12">
         <div class="mb-3 col-md-6" >
