--- a/bookmarks.html
+++ b/bookmarks.html
@@ -18,13 +18,13 @@
       <div class="collapse navbar-collapse  justify-content-between" id="navbarSupportedContent">
         <ul class="navbar-nav me-5 mb-2 mb-lg-0 ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Create an Event</a>
+            <a class="nav-link active" aria-current="page" href="createEvent.html">Create an Event</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Auction House</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="createEvent.html">Bookmarks</a>
+            <a class="nav-link" href="/">Bookmarks</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
